2003-12-24  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* SEMI: Version 1.14.6 (Maruoka) released.

2003-12-18  Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-process-region): Set environment variable
	LANGUAGE as well.  GNU gettext gives precedence to LANGUAGE over
	LC_ALL, when different language code is specified.  Thanks to
	Tatsuya Kinoshita <tats@vega.ocn.ne.jp>.
	[cf. <emacs-mime-ja:1599>]

2003-12-17  Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-messages-locale): New user option.
	(pgg-gpg-process-region): Set environment variable LC_ALL when
	pgg-gpg-messages-locale is specified.

	* pgg-def.el (pgg-messages-locale): New user option.

	* mime-pgp.el (mime-verify-application/pgp-signature): Copy
	messages from pgg-errors-buffer.
	(mime-add-application/pgp-keys): Ditto.

2003-12-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-edit.el (mime-edit-normalize-body): Don't use the
	`(replace-match "\\1\r\n")' form since it may convert the unibyte
	string into multibyte in Emacs 21.4.

2003-12-14  Yoichi NAKAYAMA <yoichi@geiin.org>

	* mime-play.el (mime-mailcap-method-sentinel): Restore deleting
	directory routine and protection of 1st arg of `message' dropped
	in the last change.
	(mime-mailcap-delete-played-files): Ditto.

2003-12-12  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* mime-play.el (mime-play-delete-file-immediately): New user option.
	(mime-mailcap-method-sentinel): Use it.
	(mime-mailcap-delete-played-files): New function; set up for
	`kill-emacs-hook'.

2002-05-18  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* mime-play.el (mime-activate-mailcap-method): Don't use
	`binary-to-text-funcall'. (Thanks to TANAKA Shingo)

2003-12-14  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>

	* mime-edit.el (mime-charset-type-list): Add entry for iso-8859-1[45].

2003-12-12  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mime-edit.el (mime-edit-user-agent-value): Add a setting for
	XEmacs CHISE.
